# tifonator

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: generate.py  scrape.py  train.py  transcribe.py
tests/unit/: test_scrape.py  test_transcribe.py
tifonator/: README.md  app.py  generate.py  models.py  scrape.py  train.py  transcribe.py
