[project]
name = "tifonator"
version = "0.1.0"
description = "AI-generated podcast episodes in the style of Tifo Football"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    # Phase 1: Scrape (always required)
    "feedparser>=6.0",
    "httpx>=0.27",
    "tqdm>=4.66",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
# Install per phase: uv sync --extra train  /  uv sync --extra generate
train = [
    "mlx-whisper>=0.4",
    "mlx-lm>=0.18",
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.19",
    "accelerate>=0.29",
]
generate = [
    "TTS>=0.22",
    "gradio>=4.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
tifonator = "tifonator.app:main"

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = ["integration: hits real external services"]

[tool.ruff]
line-length = 100
